# lablog-rs

./: .travis.yml  Cargo.toml  LICENSE  README.md  Rocket.toml  TODO.asciidoc  TODO.md  build.rs
autocomplete/: _lablog  lablog.bash-completion  lablog.fish
back/: original.rs  original.toml
lib/: Cargo.toml
lib/src/: lib.rs  main.rs  notes.header.asciidoc  timeline.header.asciidoc
src/: cli.yml  main.rs
templates/: index.html.tera  note.html.tera
