[package]
name = "lablog"
version = "0.1.0"
authors = ["Alexander Thaller <alexander@thaller.ws>"]

[dependencies]
chrono = { version = "0.2", features = ["rustc-serialize"] }
csv = "0.14"
env_logger = "*"
git2 = "0.5"
horrorshow = "0.5.8"
hyper = "*"
iron = "0.4.*"
log = "*"
loggerv = "*"
router = "*"
rustc-serialize = "0.3"
walkdir = "0.1"
xdg = "^2.0"

[dependencies.clap]
version = "*"
features = ["yaml"]
