[package]
name = "lablog"
version = "0.1.0"
authors = ["Alexander Thaller <alexander@thaller.ws>"]
build = "build.rs"

[dependencies]
chrono = { version = "*", features = ["rustc-serialize"] }
csv = "*"
horrorshow = "*"
log = "*"
loggerv = "*"
env_logger = "*"
regex = "*"
rustc-serialize = "*"
walkdir = "*"
xdg = "*"
tempdir = "*"
libc = "*"
githelper = "*"
rocket = "*"
rocket_codegen = "*"

[dependencies.clap]
version = "*"
features = ["yaml"]

[build-dependencies.clap]
version = "*"
features = ["yaml"]
